<resources>
    <string name="app_name">GPS Track Logger</string>

    <string name="title_activity_start_draw">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_graph">Graph</string>
    <string name="start">Start search</string>
    <string name="stop">Stop search</string>
    <string name="action_settings">Settings</string>
    <string name="draw">Map</string>
    <string name="prefs_measure">Measure Mode</string>
    <string name="prefs_autosave">Auto Save</string>
    <string name="prefs_location">Salve Location</string>
    <string name="prefs_mapsettings">Map Settings</string>
    <string name="set_compass">Modalità bussola</string>
    <string name="set_return">Inizio ritorno</string>
    <string name="load">Carica tracce</string>
    <string name="map">Mappa</string>
    <string name="loc_details">Dettagli traccia</string>
    <string name="main">Start/Stop</string>
    <string name="unloadtrack">Show Track List</string>
    <string name="startdesc">Press start button, start GPS tracking</string>
    <string name="unloadtrackdesc">Show track result</string>
    <string name="close">Chiudi</string>
    <string name="alttime">X: Tempo</string>
    <string name="altdistance">X: Distanza</string>
    <string name="available">Disponibile</string>
    <string name="enabled">Abilitato</string>
    <string name="timestamp">Data</string>
    <string name="latitude">Latitudine</string>
    <string name="longitude">Longitudine</string>
    <string name="altitude">Altitudine</string>
    <string name="speed">Velocità</string>
    <string name="currentdist">Distanza percorsa</string>
    <string name="currenttime">Tempo trascorso</string>
    <string name="fit">Fit</string>
    <string name="restore">Restore</string>
    <string name="fileicon">File icon</string>
    <string name="showchart">Grafico</string>
    <string name="remove">remove</string>
    <string name="errorpoints">Rimuovi error points</string>
    <string name="running">GPS Track Logger è in esecuzione</string>
    <string name="notification_stop">Ferma</string>

    <string-array name="action_list">
        <item>View Map</item>
        <item>Location Details</item>
        <item>Set Return</item>
    </string-array>

    <string-array name="minTimes">
        <item>None</item>
        <item>1 min</item>
        <item>10 min</item>
        <item>30 min</item>
        <item>1 hour</item>
    </string-array>

    <string-array name="minTimesValues">
        <item>0</item>
        <item>60</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

    <string-array name="minDistances">
        <item>15m</item>
        <item>30m</item>
        <item>50m</item>
        <item>70m</item>
    </string-array>

    <string-array name="minDistancesValues">
        <item>15</item>
        <item>30</item>
        <item>50</item>
        <item>70</item>
    </string-array>

    <string-array name="elapsedTime">
        <item>None</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
    </string-array>

    <string-array name="elapsedTimeValues">
        <item>0</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>

    <string-array name="elapsedDistances">
        <item>None</item>
        <item>100 m</item>
        <item>500 m</item>
        <item>1 km</item>
        <item>5 km</item>
        <item>10 km</item>
    </string-array>

    <string-array name="elapsedDistancesValues">
        <item>0</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>

</resources>
