<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".GPSMainActivity">
    <item android:id="@+id/action_map"
        android:title="@string/map"
        android:icon="@drawable/ic_map_black_48dp"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_main"
        android:title="@string/main"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_compass"
        android:title="@string/set_compass"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_return"
        android:title="@string/set_return"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details"
        android:title="@string/loc_details"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:title="@string/load"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
