<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_light"
    tools:context="it.uniroma3.android.gpstracklogger.fragments.LocDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/available"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/available"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/enabled"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/enabled"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/currentdist"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/currentdist"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>


            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/currenttime"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/currenttime"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/latitude"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/latitude"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/longitude"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/longitude"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/altitude"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/altitude"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:text="@string/speed"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/speed"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>
